--- a/style.css
+++ b/style.css
@@ -1,27 +1,36 @@
-  	body {
-			margin: 0;
-			background: #333;
-			color: #fff;
-		}
-		.followMeBar {
-			background: #222;
-			border-bottom: solid 1px #111;
-			border-top: solid 1px #444;
-			padding: 1%;
-			position: relative;
-			z-index: 1;
-      top: 0px;
-		}
-		.followMeBar.fixed {
-			position: fixed;
-			top: 0px;
-			width: 98%;
-			z-index: 0;
-		}
-		.followMeBar.fixed.absolute {
-			position: absolute;
-		}
+html{
+    height: 100%;
+}
 
-		.teste{
-			height: 800px;		
-		}
+body {
+    margin: 0;
+    background: #333;
+    color: #fff;
+    height: 100%;
+}
+.followMeBar {
+    background: #222;
+    border-bottom: solid 1px #111;
+    border-top: solid 1px #444;
+    height: 90px;
+    position: relative;
+    z-index: 1;
+    top: 0px;
+    line-height: 90px;
+    text-align: center;
+    font-size: 30px;
+}
+.followMeBar.fixed {
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    z-index: 0;
+}
+
+.followMeBar.fixed.absolute {
+    position: absolute;
+}
+
+.teste{
+    height: 100%;
+}
